Fix form input spacing on smaller devices

--- a/client/src/components/reward-item/reward-item.styles.scss
+++ b/client/src/components/reward-item/reward-item.styles.scss
@@ -143,6 +143,8 @@
         padding: 0;
 
         .reward-form {
+            display: flex;
+            justify-content: center;
             margin: 0;
             width: 100%;
 
@@ -150,7 +152,8 @@
                 font-size: 1.6rem;
                 margin-top: 1rem;
                 text-align: center;
-                width: 100%;
+                width: 90%;
+                padding: 0;
                 border: none;
             }
         }
